oss-ratelimit/oss-ratelimit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    gloo: oss-rate-limit
  name: oss-rate-limit
  namespace: gloo-system
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      gloo: oss-rate-limit
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2022-05-16T15:21:08Z"
        prometheus.io/path: /metrics
        prometheus.io/port: "9091"
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        gloo: oss-rate-limit
    spec:
      containers:
        - command:
            - /bin/ratelimit
          image: allasap/rate-limit:0.0.4
          imagePullPolicy: IfNotPresent
          name: oss-rate-limit
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /healthcheck
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 2
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          securityContext:
            privileged: true
            runAsUser: 0
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /data/ratelimit/config
              name: oss-rate-limit-config
            - mountPath: /shared-socket
              name: shared-socket
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: oss-rate-limit
      serviceAccountName: oss-rate-limit
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            name: oss-rate-limit-config
          name: oss-rate-limit-config
        - hostPath:
            path: /shared-socket
            type: ""
          name: shared-socket
