oss-ratelimit/oss-ratelimit-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    gloo: oss-rate-limit
  name: oss-rate-limit
  namespace: gloo-system
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: grpc
    port: 18081
    protocol: TCP
    targetPort: 18081
  selector:
    gloo: oss-rate-limit
  sessionAffinity: None
  type: ClusterIP
