oss-ratelimit/virtual-service.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
          - exact: /all-pets
        options:
          prefixRewrite: /api/pets
          ratelimit:
            rateLimits:
              - actions:
                  - genericKey:
                      descriptorValue: per-minute
        routeAction:
          single:
            upstream:
              name: default-petstore-8080
              namespace: gloo-system
